# 8085-simulator

./: .gitignore  CHANGELOG.txt  README.org  command_model.py  converter.py  custom_dictionaries.py  data.py  interpreter.py  main.py  messages.py  pyproject.toml  state_model.py  usage_examples.org
.github/workflows/: main.yml
