[tool.poetry]
name = "pyassm"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyreadline = "^2.1"
rich = "^11.1.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.20"
ipython = "^8.0.1"
pyinstaller = "^4.10"
black = "^22.1.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
